--- a/cloudflare-worker/wrangler.toml
+++ b/cloudflare-worker/wrangler.toml
@@ -1,5 +1,5 @@
 name = "open-source-pdf-chat"
-main = "src/index.ts"
+main = "./src/index.ts"
 compatibility_date = "2023-08-23"
 node_compat=true
 keep_vars = true
