--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.12.2",
+    "firebase-admin": "^12.2.0",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
     "react": "^18",
