--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -9,15 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/community": "^0.2.17",
+    "@pinecone-database/doc-splitter": "^0.0.1",
+    "@pinecone-database/pinecone": "^2.2.2",
+    "clsx": "^2.1.1",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
+    "md5": "^2.3.0",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/md5": "^2.3.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
