--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.0",
     "@langchain/community": "^0.2.17",
     "@pinecone-database/doc-splitter": "^0.0.1",
     "@pinecone-database/pinecone": "^2.2.2",
+    "@tanstack/react-query": "^5.49.2",
     "clsx": "^2.1.1",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
@@ -20,6 +22,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
