--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -13,15 +13,21 @@
     "@langchain/community": "^0.2.17",
     "@pinecone-database/doc-splitter": "^0.0.1",
     "@pinecone-database/pinecone": "^2.2.2",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.49.2",
+    "ai": "2.2.11",
+    "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.12.2",
     "firebase-admin": "^12.2.0",
+    "lucide-react": "^0.400.0",
     "md5": "^2.3.0",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
