--- a/nextjs/package.json
+++ b/nextjs/package.json
@@ -25,6 +25,7 @@
     "md5": "^2.3.0",
     "mongoose": "^8.4.4",
     "next": "14.2.4",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
